# interpretter_in_python

./: pyproject.toml
interpretter_in_python/: app.py  ast_type.py  evaluator.py  lexer.py  main.py  monkey_parser.py  object.py  token.py  token_type.py
tests/: conftest.py  test_evaluator.py  test_interpretter_in_python.py  test_lexer.py  test_parser.py
