[tool.poetry]
name = "interpretter-in-python"
version = "0.1.0"
description = ""
authors = ["Naruhiro Hayashi <naruhiro_hayashi@so-netmedia.jp>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
